--- a/index.css
+++ b/index.css
@@ -75,3 +75,79 @@
 .offcanvas.offcanvas-start {
   width: 50%;
 }
+
+.orderList {
+  list-style-type: none;
+}
+
+.listItem {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  gap: 5px;
+  border: 1px solid #d6d3d3;
+}
+
+.imageProductsEl {
+  width: 75px;
+}
+
+.imageProducts {
+  width: 100%;
+}
+
+.titleEl {
+  display: flex;
+  align-items: center;
+  font-size: 19px;
+}
+
+.quantityAndPrice {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.textWhite {
+  color: white;
+  font-size: 24px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.buttonMinus, .buttonPlus {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 5px;
+  background-color: #706d6d;
+}
+
+.buttonDisabled {
+  background-color: #d2d3d4;
+}
+
+.quantityPrice {
+  background-color: #0d6efd;
+  color: white;
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+
+.RemoveFromOrder {
+  display: flex;
+}
+
+.buttonRemoveFromOrder {
+  background-color: #e25c44;
+  color: white;
+  font-size: 16px;
+  font-family:Arial, Helvetica, sans-serif ;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 7px;
+}
